--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,267 @@
+:root {
+  --color-gray-dark: #5C5C5C;
+  --color-gray-dark2: #C4C4C4;
+  --color-gray: #E7E7E7;
+  --color-gray-light: #FBFBFB;
+  --color-main: #0E2345;
+  --color-red: #D84747;
+  --color-white: #FFF;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  color: inherit;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Averta', 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-gray-light);
+  font-size: 24px;
+}
+
+button {
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: wait;
+  opacity: 0.6;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+h1 {
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+input {
+  background-color: var(--color-gray-dark2);
+}
+
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+  display: block;
+  width: 100%;
+  border: 0;
+  padding: 12px 20px;
+  margin-bottom: 30px;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.box {
+  border-bottom: 10px var(--color-gray) solid;
+  background-color: var(--color-white);
+  width: 650px;
+  padding: 80px 80px 60px;
+}
+
+.button {
+  width: 100%;
+  display: block;
+  background-color: var(--color-main);
+  border: 1px solid var(--color-main);
+  color: var(--color-white);
+  text-align: center;
+  padding: 12px 25px;
+}
+
+.button--outline {
+  background-color: transparent;
+  color: var(--color-main);
+}
+
+.button-link {
+  text-decoration: underline;
+}
+
+.button-link:focus,
+.button-link:hover {
+  text-decoration: none;
+}
+
+.container {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+}
+
+.grid__col-2 {
+  width: 50%;
+  padding-left: 30px;
+}
+
+.grid__col-3 {
+  width: 33.333333%;
+  padding-left: 30px;
+  align-self: flex-end;
+}
+
+.m30 {
+  height: 30px;
+}
+
+.m100 {
+  height: 100px;
+}
+
+.mb30 {
+  margin-bottom: 30px;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 650px;
+  z-index: 100;
+  background-color: --color-white;
+  border-bottom: 10px var(--color-gray-dark) solid;
+}
+
+.modal__content {
+  background-color: var(--color-white);
+  padding: 50px 80px 60px;
+}
+
+.modal__head {
+  background-color: var(--color-main);
+  color: var(--color-white);
+  text-align: center;
+  font-weight: 700;
+  padding: 25px 30px;
+}
+
+.modal-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 90;
+  background-color: rgba(103, 103, 103, 0.6);
+}
+
+.nav-menu {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-menu li:not(:last-of-type) {
+  margin-right: 40px;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.navigation__link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.navigation__link:focus,
+.navigation__link:hover {
+  text-decoration: underline;
+}
+
+.page {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.page__content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+.page__head {
+  background-color: var(--color-main);
+  color: var(--color-white);
+  margin-bottom: 30px;
+}
+
+.table {
+  border-collapse: collapse;
+  width: 100%;
+  border-bottom: 10px var(--color-gray) solid;
+  background-color: var(--color-white);
+}
+
+.table td {
+  padding: 30px;
+  font-size: 18px;
+}
+
+.table th {
+  padding: 25px 30px;
+  text-align: left;
+}
+
+.table thead {
+  background-color: var(--color-main);
+  color: var(--color-white);
+}
+
+.table tr {
+  border-bottom: 1px rgb(14, 35, 69, 0.2) solid;
+}
+
+.table__remove {
+  width: 100px;
+  text-align: center;
+  font-weight: 700;
+}
+
+.text-bold {
+  font-weight: 700;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-gray {
+  color: var(--color-gray-dark);
+}
+
+.text-red {
+  color: var(--color-red);
+}
+
+.Toastify {
+  font-size: 16px;
 }
